<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.android.scorekeeper_jungleshooting.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/jungle"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:progress="@android:integer/status_bar_notification_info_maxnum"
                android:progressTint="@color/progressBarColor"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/hp_playerOne"
                style="@style/textView"
                android:fontFamily="sans-serif-light"
                android:text="@string/hitPoints" />

            <ImageView
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center_horizontal"
                android:src="@drawable/arnie_classic"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/button1"
                style="@style/Buttons"
                android:contentDescription="@string/button1_bazooka"
                android:onClick="useBazookaOnSly"
                android:src="@drawable/bazooka"

                />

            <ImageButton
                android:id="@+id/button2"
                style="@style/Buttons"
                android:contentDescription="@string/button2_grenade"
                android:onClick="useGrenadeOnSly"
                android:src="@drawable/bomb"

                />

            <ImageButton
                android:id="@+id/button3"
                style="@style/Buttons"
                android:contentDescription="@string/button3_uranium"
                android:onClick="useUraniumOnSly"
                android:src="@drawable/uranium"

                />

            <ImageButton
                android:id="@+id/button7"
                style="@style/Buttons"
                android:contentDescription="@string/button4_medkit"
                android:onClick="useMedKitonArnie"
                android:src="@drawable/med_kit"

                />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:progress="@android:integer/status_bar_notification_info_maxnum"
                android:progressTint="@color/progressBarColor"
                tools:visibility="visible" />

            <TextView

                android:id="@+id/hp_playerTwo"
                style="@style/textView"
                android:fontFamily="sans-serif-light"
                android:text="@string/hitPoints" />

            <ImageView
                style="@style/PlayerImage"
                android:adjustViewBounds="true"
                android:src="@drawable/sly_classic"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/button4"
                style="@style/Buttons"
                android:contentDescription="@string/button5_bazooka"
                android:onClick="useBazookaOnArnie"
                android:src="@drawable/bazooka" />

            <ImageButton
                android:id="@+id/button5"
                style="@style/Buttons"
                android:contentDescription="@string/button6_grenade"
                android:onClick="useGrenadeOnArnie"
                android:src="@drawable/bomb" />

            <ImageButton
                android:id="@+id/button6"
                style="@style/Buttons"
                android:contentDescription="@string/button7_uranium"
                android:onClick="useUraniumOnArnie"
                android:src="@drawable/uranium" />

            <ImageButton
                android:id="@+id/button8"
                style="@style/Buttons"
                android:contentDescription="@string/button8_medkit"
                android:onClick="useMedKitOnSly"
                android:src="@drawable/med_kit" />

        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/ResetButton"
        android:onClick="resetScore"
        android:text="@string/resetButton" />

</RelativeLayout>

